--- a/componentes/footer/footer.html
+++ b/componentes/footer/footer.html
@@ -47,22 +47,22 @@
                 <div class="row col-12 justify-content-center justify-content-lg-around py-1">
                     <div class="col-2 col-lg-3 texto-footer">
                         <a class="link-footer" href="https://www.facebook.com/" target="_blank">
-                            <img src="/componentes/icones/icon-facebook.png" alt="ícone do facebook" class="icon-footer">
+                            <img src="/images/icones/icon-facebook.png" alt="ícone do facebook" class="icon-footer">
                         </a>
                     </div>
                     <div class="col-2 col-lg-3 texto-footer">
                         <a class="link-footer" href="https://twitter.com/" target="_blank">
-                            <img src="/componentes/icones/icon-twitter.png" alt="ícone do twitter" class="icon-footer">
+                            <img src="/images/icones/icon-twitter.png" alt="ícone do twitter" class="icon-footer">
                         </a>
                     </div>
                     <div class="col-2 col-lg-3 texto-footer">
                         <a class="link-footer" href="https://discord.com/" target="_blank">
-                        <img src="/componentes/icones/icon-discord.png" alt="ícone do discord" class="icon-footer">
+                        <img src="/images/icones/icon-discord.png" alt="ícone do discord" class="icon-footer">
                         </a>
                     </div>
                     <div class="col-2 col-lg-3 texto-footer">
                         <a class="link-footer" href="https://www.instagram.com/" target="_blank">
-                            <img src="/componentes/icones/icon-instagram.png" alt="ícone do instagram" class="icon-footer">
+                            <img src="/images/icones/icon-instagram.png" alt="ícone do instagram" class="icon-footer">
                         </a>
                     </div>
                 </div>
@@ -70,10 +70,10 @@
                 <!-- metodos de pagamento -->
                 <div class="row d-none d-lg-flex col-12 justify-content-center pb-1 mx-0">MÉTODOS DE PAGAMENTO</div>
                 <div class="row d-none d-lg-flex col-lg-12 justify-content-around py-1">
-                    <div class="col-lg-3 texto-footer"><img src="/componentes/icones/icon-mastercard.png" alt="ícone do mastercard" class="icon-footer"></div>
-                    <div class="col-lg-3 texto-footer"><img src="/componentes/icones/icon-visa.png" alt="ícone da visa" class="icon-footer"></div>
-                    <div class="col-lg-3 texto-footer"><img src="/componentes/icones/icon-codigo-de-barras.png" alt="ícone do boleto" class="icon-footer"></div>
-                    <div class="col-lg-3 texto-footer"><img src="/componentes/icones/icon-pix.png" alt="ícone do pix" class="icon-footer"></div>
+                    <div class="col-lg-3 texto-footer"><img src="/images/icones/icon-mastercard.png" alt="ícone do mastercard" class="icon-footer"></div>
+                    <div class="col-lg-3 texto-footer"><img src="/images/icones/icon-visa.png" alt="ícone da visa" class="icon-footer"></div>
+                    <div class="col-lg-3 texto-footer"><img src="/images/icones/icon-codigo-de-barras.png" alt="ícone do boleto" class="icon-footer"></div>
+                    <div class="col-lg-3 texto-footer"><img src="/images/icones/icon-pix.png" alt="ícone do pix" class="icon-footer"></div>
                 </div>
                 <div class="row d-lg-none col-12 justify-content-center py-3 mx-0">
                     <div class="texto-footer"><a class="link-footer" href="">LOGIN</a></div><br>
