--- a/dashboardcliente.html
+++ b/dashboardcliente.html
@@ -10,14 +10,14 @@
     <link href="./css/footer.css" rel="stylesheet">
     <link href="./componentes/botoes/botoes.css" rel="stylesheet">
     <link href="./css/dashboardcliente.css" rel="stylesheet">
-    <title>Document</title>
+    <title>MVP Skins</title>
 </head>
 
 <body>
     <!-- inicio pagamento -->
-    <div class="row my-3 mx-0">
+    <div class="row mb-3 mx-0">
         <!-- inicio menu lateral -->
-        <nav class="row col-2 d-flex py-3 px-0 mx-0 h-100 nav-dashboard">
+        <nav class="row d-none d-lg-flex col-2 d-flex py-3 px-0 mx-0 h-100 nav-dashboard">
             <div class="text-center titulo-nav">MINHA CONTA</div>
             <ul type="none">
                 <a target="self" href="#historico" class="link-pagamento"><li class="ps-4 itens-nav nav-historico">Histórico de Compras</li></a>
@@ -37,59 +37,54 @@
             </div>
         </nav>
         <!-- fim menu lateral -->
-        <section class="col-10 p-0">
+        <section class="col-12 col-lg-10 p-0">
             <!-- inicio historico de compra -->
             <div class="row d-flex col-12 mx-0 justify-content-center">
                 <div class="col-11 my-3 p-2 div-dashboard">
                     <div id="historico" class="col-12 text-center titulo-div">Histórico de compras</div>
                     <div class="row col-12 d-flex mx-0 justify-content-center">
                         <div class="col-12 d-flex flex-row px-0 nome-coluna">
-                            <div class="col-2">Item</div>
-                            <div class="col-2">Categoria</div>
-                            <div class="col-3">Descrição</div>
-                            <div class="col-2">Preço</div>
-                            <div class="col-2">Data da compra</div>
-                            <div class="col-1">Status</div>
+                            <div class="d-none d-md-block col-md-2">Item</div>
+                            <div class="col-3 col-md-4">Descrição</div>
+                            <div class="col-3 col-md-2">Preço</div>
+                            <div class="col-3 col-md-2">Data da compra</div>
+                            <div class="col-3 col-md-2">Status</div>
                         </div>
                     </div>
                     <div class="row col-12 d-flex mx-0 justify-content-center">
                         <div class="col-12 d-flex flex-row px-0 texto-coluna">
-                            <div class="col-2"><img src="images/produto-carrousel-1.png" class="imagem-historico"></div>
-                            <div class="col-2">Luvas</div>
-                            <div class="col-3">LUVAS ESPORTIVAS | BATRÁQUIO BRONZEADO</div>
-                            <div class="col-2">R$1.482,00</div>
-                            <div class="col-2">12/09/2021</div>
-                            <div class="col-1">Finalizado</div>
+                            <div class="d-none d-md-flex col-md-2"><img src="./images/PRODUTOS/produto-carrousel-1.png" class="imagem-historico"></div>
+                            <div class="col-3 col-md-4">LUVAS ESPORTIVAS | BATRÁQUIO BRONZEADO</div>
+                            <div class="col-3 col-md-2">R$1.482,00</div>
+                            <div class="col-3 col-md-2">12/09/2021</div>
+                            <div class="col-3 col-md-2">Finalizado</div>
                         </div>
                     </div>
                     <div class="row col-12 d-flex mx-0 justify-content-center">
                         <div class="col-12 d-flex flex-row px-0 texto-coluna">
-                            <div class="col-2"><img src="images/produto-carrousel-1.png" class="imagem-historico"></div>
-                            <div class="col-2">Luvas</div>
-                            <div class="col-3">LUVAS ESPORTIVAS | BATRÁQUIO BRONZEADO</div>
-                            <div class="col-2">R$1.482,00</div>
-                            <div class="col-2">12/09/2021</div>
-                            <div class="col-1">Finalizado</div>
+                            <div class="d-none d-md-flex col-md-2"><img src="./images/PRODUTOS/produto-carrousel-1.png" class="imagem-historico"></div>
+                            <div class="col-3 col-md-4">LUVAS ESPORTIVAS | BATRÁQUIO BRONZEADO</div>
+                            <div class="col-3 col-md-2">R$1.482,00</div>
+                            <div class="col-3 col-md-2">12/09/2021</div>
+                            <div class="col-3 col-md-2">Finalizado</div>
                         </div>
                     </div>
                     <div class="row col-12 d-flex mx-0 justify-content-center">
                         <div class="col-12 d-flex flex-row px-0 texto-coluna">
-                            <div class="col-2"><img src="images/produto-carrousel-1.png" class="imagem-historico"></div>
-                            <div class="col-2">Luvas</div>
-                            <div class="col-3">LUVAS ESPORTIVAS | BATRÁQUIO BRONZEADO</div>
-                            <div class="col-2">R$1.482,00</div>
-                            <div class="col-2">12/09/2021</div>
-                            <div class="col-1">Finalizado</div>
+                            <div class="d-none d-md-flex col-md-2"><img src="./images/PRODUTOS/produto-carrousel-1.png" class="imagem-historico"></div>
+                            <div class="col-3 col-md-4">LUVAS ESPORTIVAS | BATRÁQUIO BRONZEADO</div>
+                            <div class="col-3 col-md-2">R$1.482,00</div>
+                            <div class="col-3 col-md-2">12/09/2021</div>
+                            <div class="col-3 col-md-2">Finalizado</div>
                         </div>
                     </div>
                     <div class="row col-12 d-flex mx-0 justify-content-center">
                         <div class="col-12 d-flex flex-row px-0 texto-coluna">
-                            <div class="col-2"><img src="images/produto-carrousel-1.png" class="imagem-historico"></div>
-                            <div class="col-2">Luvas</div>
-                            <div class="col-3">LUVAS ESPORTIVAS | BATRÁQUIO BRONZEADO</div>
-                            <div class="col-2">R$1.482,00</div>
-                            <div class="col-2">12/09/2021</div>
-                            <div class="col-1">Finalizado</div>
+                            <div class="d-none d-md-flex col-md-2"><img src="./images/PRODUTOS/produto-carrousel-1.png" class="imagem-historico"></div>
+                            <div class="col-3 col-md-4">LUVAS ESPORTIVAS | BATRÁQUIO BRONZEADO</div>
+                            <div class="col-3 col-md-2">R$1.482,00</div>
+                            <div class="col-3 col-md-2">12/09/2021</div>
+                            <div class="col-3 col-md-2">Finalizado</div>
                         </div>
                     </div>
                 </div>
@@ -100,30 +95,27 @@
                         <div id="cartoes-credito" class="col-12 text-center titulo-div">Cartões de crédito</div>
                         <div class="row col-12 d-flex mx-0 justify-content-center">
                             <div class="col-12 d-flex flex-row px-0 nome-coluna">
-                                <div class="col-2">Bandeira</div>
-                                <div class="col-2">Banco</div>
-                                <div class="col-3">Terminado em:</div>
-                                <div class="col-2">Vencimento</div>
+                                <div class="col-4 col-md-2">Bandeira</div>
+                                <div class="col-4 col-md-3">Terminado em:</div>
+                                <div class="col-4 col-md-2">Vencimento</div>
                             </div>
                         </div>
                         <div class="row col-12 d-flex mx-0 justify-content-center">
-                            <div class="col-12 d-flex flex-row px-0 texto-coluna">
-                                <div class="col-2"><img src="images/icones/icon-mastercard2.png" alt="Logo mastercard" width="60" height="45"></div>
-                                <div class="col-2">Bradesco</div>
-                                <div class="col-3">6739</div>
-                                <div class="col-2">01/2030</div>
-                                <div class="col-3">
+                            <div class="col-12 d-flex flex-row flex-wrap px-0 texto-coluna">
+                                <div class="col-4 col-md-2"><img src="images/icones/icon-mastercard2.png" alt="Logo mastercard" width="60" height="45"></div>
+                                <div class="col-4 col-md-3">6739</div>
+                                <div class="col-4 col-md-2">01/2030</div>
+                                <div class="col-12 col-md-5 my-3">
                                     <button type="button" class="btn btn-outline-secondary btn-mvp btn-secundario-mvp col-10">Excluir cartão</button>
                                 </div>
                             </div>
                         </div>
                         <div class="row col-12 d-flex mx-0 justify-content-center">
-                            <div class="col-12 d-flex flex-row px-0 texto-coluna">
-                                <div class="col-2"><img src="images/icones/icon-visa2.png" alt="Logo mastercard" width="80" height="25" ></div>
-                                <div class="col-2">Nubank</div>
-                                <div class="col-3">5172</div>
-                                <div class="col-2">01/2028</div>
-                                <div class="col-3">
+                            <div class="col-12 d-flex flex-row flex-wrap px-0 texto-coluna">
+                                <div class="col-4 col-md-2"><img src="images/icones/icon-visa2.png" alt="Logo mastercard" width="80" height="25" ></div>
+                                <div class="col-4 col-md-3">5172</div>
+                                <div class="col-4 col-md-2">01/2028</div>
+                                <div class="col-12 col-md-5 my-3 justify-content-center">
                                     <button type="button" class="btn btn-outline-secondary btn-mvp btn-secundario-mvp col-10">Excluir cartão</button>
                                 </div>
                             </div>
@@ -133,35 +125,38 @@
                 <!-- fim cartoes de credito -->
                 <!-- inicio container dados conta e seguranca -->
                 <div class="row d-flex col-12 mx-0 px-0 justify-content-center">
-                    <div class="col-11 d-flex px-0 justify-content-between">
+                    <div class="col-11 d-flex px-0 justify-content-between flex-wrap">
                         <!-- inicio dados da conta -->
-                        <div class="col-6 d-flex justify-content-start">
-                            <div class="col-11 my-3 p-2 div-dashboard">
+                        <div class="col-12 col-md-6 d-flex justify-content-start">
+                            <div class="col-12 col-md-11 col-lg-11 my-3 p-2 div-dashboard">
                                 <div id="dados-conta" class="col-12 text-center titulo-div">Dados da Conta</div>
-                                <div class="row col-12 mx-0 justify-content-center">
-                                    FORMULARIO1
+                                <div class="row col-12 mx-0 my-2 justify-content-center texto-coluna">
+                                    <div class="col-4">Usuário</div>
+                                    <div class="col-8">FULANOSILVA</div>
                                 </div>
-                                <div class="row col-12 mx-0 justify-content-center">
-                                    FORMULARIO2
+                                <div class="row col-12 mx-0 my-2 justify-content-center texto-coluna">
+                                    <div class="col-4">E-mail</div>
+                                    <div class="col-8">FULANOSILVA@GMAIL.COM</div>
                                 </div>
-                                <div class="row col-12 mx-0 justify-content-center">
-                                    FORMULARIO3
+                                <div class="row col-12 mx-0 my-2 justify-content-center texto-coluna">
+                                    <div class="col-4">Conexão Steam</div>
+                                    <div class="col-8">CONECTADO</div>
                                 </div>
                             </div>
                         </div>
                         <!-- fim dados da conta -->
                         <!-- inicio seguranca -->
-                        <div class="col-6 d-flex justify-content-end">
-                            <div class="col-11 my-3 p-2 div-dashboard">
+                        <div class="col-12 col-md-6 d-flex justify-content-end">
+                            <div class="col-12 col-md-11 col-lg-11 my-3 p-2 div-dashboard">
                                 <div id="seguranca" class="col-12 text-center titulo-div">Segurança</div>
                                 <div class="row col-12 mx-0">
-                                    <div class="col-12 d-flex justify-content-center">
+                                    <div class="col-12 d-flex justify-content-center texto-coluna">
                                         <div class="col-4 text-center">Senha</div>
                                         <div class="col-8 text-center">ALTERAR SENHA</div>
                                     </div>
                                 </div>
                                 <div class="row col-12 mx-0">
-                                    <div class="col-12 d-flex justify-content-center">
+                                    <div class="col-12 d-flex justify-content-center texto-coluna">
                                         <div class="col-4 text-center">Conta</div>
                                         <div class="col-8 text-center">EXCLUIR MINHA CONTA</div>
                                     </div>
@@ -204,8 +199,7 @@
                     <div class="texto-footer"><a class="link-footer" href="">FALE CONOSCO</a></div>
                 </div>
                 <!-- dados da empresa -->
-                <div class="row col-12 justify-content-center pt-3">© MVP SKINS 2021 | CNPJ: 61.585.865/0001-51 | TODOS
-                    OS DIREITOS RESERVADOS</div>
+                <div class="row col-12 justify-content-center pt-3">© MVP SKINS 2021 | CNPJ: 61.585.865/0001-51 |  TODOS OS DIREITOS RESERVADOS</div>
             </div>
             <!-- quarta coluna  -->
             <div class="col-12 col-lg-4">
@@ -214,24 +208,22 @@
                 <div class="row col-12 justify-content-center justify-content-lg-around py-1">
                     <div class="col-2 col-lg-3 texto-footer">
                         <a class="link-footer" href="https://www.facebook.com/" target="_blank">
-                            <img src="./componentes/icones/icon-facebook.png" alt="ícone do facebook"
-                                class="icon-footer">
+                            <img src="./images/icones/icon-facebook.png" alt="ícone do facebook" class="icon-footer">
                         </a>
                     </div>
                     <div class="col-2 col-lg-3 texto-footer">
                         <a class="link-footer" href="https://twitter.com/" target="_blank">
-                            <img src="./componentes/icones/icon-twitter.png" alt="ícone do twitter" class="icon-footer">
+                            <img src="./images/icones/icon-twitter.png" alt="ícone do twitter" class="icon-footer">
                         </a>
                     </div>
                     <div class="col-2 col-lg-3 texto-footer">
                         <a class="link-footer" href="https://discord.com/" target="_blank">
-                            <img src="./componentes/icones/icon-discord.png" alt="ícone do discord" class="icon-footer">
+                        <img src="./images/icones/icon-discord.png" alt="ícone do discord" class="icon-footer">
                         </a>
                     </div>
                     <div class="col-2 col-lg-3 texto-footer">
                         <a class="link-footer" href="https://www.instagram.com/" target="_blank">
-                            <img src="./componentes/icones/icon-instagram.png" alt="ícone do instagram"
-                                class="icon-footer">
+                            <img src="./images/icones/icon-instagram.png" alt="ícone do instagram" class="icon-footer">
                         </a>
                     </div>
                 </div>
@@ -239,14 +231,10 @@
                 <!-- metodos de pagamento -->
                 <div class="row d-none d-lg-flex col-12 justify-content-center pb-1 mx-0">MÉTODOS DE PAGAMENTO</div>
                 <div class="row d-none d-lg-flex col-lg-12 justify-content-around py-1">
-                    <div class="col-lg-3 texto-footer"><img src="./componentes/icones/icon-mastercard.png"
-                            alt="ícone do mastercard" class="icon-footer"></div>
-                    <div class="col-lg-3 texto-footer"><img src="./componentes/icones/icon-visa.png" alt="ícone da visa"
-                            class="icon-footer"></div>
-                    <div class="col-lg-3 texto-footer"><img src="./componentes/icones/icon-codigo-de-barras.png"
-                            alt="ícone do boleto" class="icon-footer"></div>
-                    <div class="col-lg-3 texto-footer"><img src="./componentes/icones/icon-pix.png" alt="ícone do pix"
-                            class="icon-footer"></div>
+                    <div class="col-lg-3 texto-footer"><img src="./images/icones/icon-mastercard.png" alt="ícone do mastercard" class="icon-footer"></div>
+                    <div class="col-lg-3 texto-footer"><img src="./images/icones/icon-visa.png" alt="ícone da visa" class="icon-footer"></div>
+                    <div class="col-lg-3 texto-footer"><img src="./images/icones/icon-codigo-de-barras.png" alt="ícone do boleto" class="icon-footer"></div>
+                    <div class="col-lg-3 texto-footer"><img src="./images/icones/icon-pix.png" alt="ícone do pix" class="icon-footer"></div>
                 </div>
                 <div class="row d-lg-none col-12 justify-content-center py-3 mx-0">
                     <div class="texto-footer"><a class="link-footer" href="">LOGIN</a></div><br>
@@ -254,8 +242,7 @@
                     <div class="texto-footer"><a class="link-footer" href="">RECUPERAR SENHA</a></div><br>
                     <div class="texto-footer"><a class="link-footer" href="">FALE CONOSCO</a></div><br>
                 </div>
-                <div class="row d-lg-none col-12 justify-content-center py-3 mx-0 text-center">© MVP SKINS 2021 | CNPJ:
-                    61.585.865/0001-51 | TODOS OS DIREITOS RESERVADOS</div>
+                <div class="row d-lg-none col-12 justify-content-center py-3 mx-0 text-center">© MVP SKINS 2021 | CNPJ: 61.585.865/0001-51 |  TODOS OS DIREITOS RESERVADOS</div>
             </div>
         </div>
     </footer>
