Alteração em titulos e responsividade cadastro-cliente

--- a/cadastro-cliente.html
+++ b/cadastro-cliente.html
@@ -239,30 +239,34 @@
                 CADASTRO
                 <p></p>
             </div>
-            <div class="d-flex justify-content-center">
-                <div class="mb-3 col-5 p-3">
+            <div class="d-flex flex-wrap justify-content-center">
+                <div class="mb-3 col-10 col-md-5 p-3">
                     <label for="" class="form-label">Nome</label>
                     <input type="text" class="form-control caixas-de-insercao" aria-describedby="emailHelp"
                         placeholder="Digite seu nome">
                 </div>
-                <div class="mb-3 col-5 p-3">
+                <div class="mb-3 col-10 col-md-5 p-3">
                     <label for="" class="form-label">Sobrenome</label>
                     <input type="text" class="form-control caixas-de-insercao" placeholder="Digite o Sobrenome">
                 </div>
             </div>
-            <div class="col-12 d-flex justify-content-center">
-                <div class="mb-3 col-5 p-3">
+            <div class="col-12 d-flex flex-wrap justify-content-center">
+                <div class="mb-3 col-10 col-md-5 p-3">
                     <label for="" class="form-label">CPF</label>
                     <input type="text" class="form-control caixas-de-insercao" aria-describedby="emailHelp"
                         placeholder="Digite seu CPF">
                 </div>
-                <div class="mb-3 col-5 p-3">
+                <div class="mb-3 col-10 col-md-5 p-3">
+                    <label for="" class="form-label">Email</label>
+                    <input type="text" class="form-control caixas-de-insercao" placeholder="Digite seu Email">
+                </div>
+            </div>
+            <div class="col-12 d-flex flex-wrap justify-content-center">
+                <div class="mb-3 col-10 col-md-5 p-3">
                     <label for="" class="form-label">Usuário da Steam</label>
                     <input type="text" class="form-control caixas-de-insercao" placeholder="Digite o Usuário">
                 </div>
-            </div>
-            <div class="col-12 d-flex justify-content-center">
-                <div class="mb-3 col-5 p-3">
+                <div class="mb-3 col-10 col-sm-5 col-md-2 p-3">
                     <label for="" class="form-label">Gênero</label>
                     <select class="form-select caixas-de-insercao" aria-label="Default select example">
                         <option selected class="selecao">Selecione o Gênero</option>
@@ -271,18 +275,18 @@
                         <option value="3" class="selecao">Outros</option>
                     </select>
                 </div>
-                <div class="mb-3 col-5 p-3">
+                <div class="mb-3 col-10 col-sm-5 col-md-3 p-3">
                     <label for="" class="form-label">Data de nascimento</label>
                     <input type="date" class="form-control caixas-de-insercao">
                 </div>
             </div>
-            <div class="col-12 d-flex justify-content-center">
-                <div class="mb-3 col-5 p-3">
+            <div class="col-12 d-flex flex-wrap justify-content-center">
+                <div class="mb-3 col-10 col-sm-5 p-3">
                     <label for="" class="form-label">Crie uma senha</label>
                     <input type="password" class="form-control caixas-de-insercao" aria-describedby="emailHelp"
                         placeholder="Digite a senha">
                 </div>
-                <div class="mb-3 col-5 p-3">
+                <div class="mb-3 col-10 col-sm-5 p-3">
                     <label for="" class="form-label">Repita a senha</label>
                     <input type="password" class="form-control caixas-de-insercao" placeholder="Digite a senha">
                 </div>
