--- a/carrinho.html
+++ b/carrinho.html
@@ -17,7 +17,7 @@
     <link rel='stylesheet' href="./componentes/modal-login/login.css">
     <link rel="stylesheet" href="/css/carrinho.css">
 
-    <title>MVP SKINS | CARRINHO</title>
+    <title>MVP Skins | Carrinho</title>
     <link rel="shortcut icon" type="imagex/png" href="/images/ID/image (2) (1).png">
   </head>
 
