--- a/dashboardcliente.html
+++ b/dashboardcliente.html
@@ -12,7 +12,7 @@
     <link rel='stylesheet' href="./componentes/header/header.css">
     <link rel='stylesheet' href="./componentes/modal-login/login.css">
     <link href="./css/dashboardcliente.css" rel="stylesheet">
-    <title>MVP Skins</title>
+    <title>MVP Skins | Dashboard Clientes</title>
 </head>
 
 <body>
