--- a/dashboardcliente.html
+++ b/dashboardcliente.html
@@ -12,7 +12,7 @@
     <link rel='stylesheet' href="./componentes/header/header.css">
     <link rel='stylesheet' href="./componentes/modal-login/login.css">
     <link href="./css/dashboardcliente.css" rel="stylesheet">
-    <title>MVP Skins</title>
+    <title>MVP SKINS | DASHBOARD</title>
 </head>
 
 <body>
@@ -35,14 +35,14 @@
 
       <!--BOTÃO DO LOGIN-->
       <div class="botoes-menu col-12 col-xs-12 col-md-4 col-lg-4 col-xl-3">
-        <button type="button" class="btn btn-primary btn-mvp btn-secundario-mvp btn-login d-flex justify-content-center align-items-center" data-bs-toggle="modal"
+        <button type="button" class="d-none btn btn-primary btn-mvp btn-secundario-mvp btn-login d-flex justify-content-center align-items-center" data-bs-toggle="modal"
           data-bs-target="#exampleModal">
           Login
         </button>
       <!--FIM DO BOTÃO DO LOGIN-->
       
       <!-- BOTÃO DE CADASTRO  -->
-        <button type="reset" class="btn btn-outline-secondary btn-mvp btn-secundario-mvp btn-cadastrar d-flex justify-content-center align-items-center"
+        <button type="reset" class="d-none btn btn-outline-secondary btn-mvp btn-secundario-mvp btn-cadastrar d-flex justify-content-center align-items-center"
           data-bs-dismiss="modal">
           Cadastre-se
         </button>
@@ -223,20 +223,18 @@
     <!-- inicio pagamento -->
     <div class="row mb-3 mx-0">
         <!-- inicio menu lateral -->
-        <nav class="row d-none d-lg-flex col-2 d-flex py-3 px-0 mx-0 h-100 nav-dashboard">
+        <nav class="row d-lg-flex col-2 d-flex py-3 px-0 mx-0 h-100 nav-dashboard">
             <div class="text-center titulo-nav">MINHA CONTA</div>
-            <ul type="none">
-                <a target="self" href="#historico" class="link-pagamento"><li class="ps-4 itens-nav nav-historico">Histórico de Compras</li></a>
-                <li class="ps-4 itens-nav nav-dados">Meus dados
-                    <ul type="none" class="ps-3">
-                        <li >Dados Pessoais</li>
-                        <a target="self" href="#cartoes-credito" class="link-pagamento"><li>Cartões de crédito</li></a>
-                        <a target="self" href="#dados-conta" class="link-pagamento"><li>Dados da conta</li></a>
-                        <a target="self" href="#seguranca" class="link-pagamento"><li>Alterar senha</li></a>
-                    </ul>
-                </li> 
-                <li></li>
-            </ul>
+            <ul class="list-group">
+              
+              <li class="list-group-item d-flex justify-content-between nav-dados"> Dados Pessoais</li>
+              <a target="self" href="#cartoes-credito" class="link-pagamento d-flex justify-content-center">Cartões de crédito</a>
+              <a target="self" href="#dados-conta" class="link-pagamento d-flex justify-content-center">Dados da conta</a>
+              <a target="self" href="#seguranca" class="link-pagamento d-flex justify-content-center">Alterar senha</a>
+
+              <li class="list-group-item d-flex justify-content-between nav-historico">
+                <a target="self" href="#historico" class="link-pagamento"> Histórico de Compras</a>
+              </li>
             <div class="nav-contato">
                 <div class="col-12 d-flex text-center align-self-end justify-content-center">Preciso de ajuda com a minha conta</div>
                 <div class="col-12 d-flex align-self-end justify-content-center"><img src="./images/icones/icon-contato.png" class="imagem-nav"></div>
