--- a/pagamento.html
+++ b/pagamento.html
@@ -11,7 +11,7 @@
     <link rel='stylesheet' href="./componentes/header/header.css">
     <link rel='stylesheet' href="./componentes/modal-login/login.css">
     <link href="./css/pagamento.css" rel="stylesheet">
-    <title>MVP Skins</title>
+    <title>MVP SKINS | PAGAMENTO</title>
 </head>
 <body>
     <!-- INICIO HEADER -->
@@ -33,14 +33,14 @@
 
       <!--BOTÃO DO LOGIN-->
       <div class="botoes-menu col-12 col-xs-12 col-md-4 col-lg-4 col-xl-3">
-        <button type="button" class="btn btn-primary btn-mvp btn-secundario-mvp btn-login d-flex justify-content-center align-items-center" data-bs-toggle="modal"
+        <button type="button" class="d-none btn btn-primary btn-mvp btn-secundario-mvp btn-login d-flex justify-content-center align-items-center" data-bs-toggle="modal"
           data-bs-target="#exampleModal">
           Login
         </button>
       <!--FIM DO BOTÃO DO LOGIN-->
       
       <!-- BOTÃO DE CADASTRO  -->
-        <button type="reset" class="btn btn-outline-secondary btn-mvp btn-secundario-mvp btn-cadastrar d-flex justify-content-center align-items-center"
+        <button type="reset" class="d-none btn btn-outline-secondary btn-mvp btn-secundario-mvp btn-cadastrar d-flex justify-content-center align-items-center"
           data-bs-dismiss="modal">
           Cadastre-se
         </button>
@@ -327,7 +327,9 @@
                         <div class="col-11">EU ACEITO OS TERMOS E CONDIÇÕES</div>
                     </div>
                     <div class="row col-12 mx-0 p-2">
+                      <a href="/home.html">
                         <button type="button" class="btn btn-primary btn-mvp btn-primario-mvp col-12">FINALIZAR COMPRA</button>
+                      </a>
                     </div>
                 </div>
             </div>
